--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        //noinspection JcenterRepositoryObsolete
         jcenter()
     }
 }
@@ -18,6 +19,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        //noinspection JcenterRepositoryObsolete
         jcenter()
         maven {url = "https://jitpack.io"}
     }
